로그인 페이지 90퍼센트

--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 - 사람인</title>
     <link rel="stylesheet" href="../static/loginPageCSS.css" />
-    <link
-      rel="shortcut icon"
-      href="https://jumpit.saramin.co.kr/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="" type="image/x-icon" />
   </head>
   <body>
     <header id="sri_header" class="integrated_header">
@@ -174,9 +170,133 @@
                 ></path>
               </svg>
             </div>
+            <div class="box_intergrated_login">
+              <div class="box_middle">
+                <div class="login_page_wrap">
+                  <form id="login_frm" class="login_frm">
+                    <div class="login_input_wrap">
+                      <ul class="tab_member_type">
+                        <li role="none">
+                          <button
+                            type="button"
+                            class="btn_tab t_per active"
+                            role="tab"
+                            selected="true"
+                            tabindex="0"
+                            aria-selected="true"
+                          >
+                            개인회원
+                          </button>
+                        </li>
+                        <li role="none">
+                          <button
+                            type="button"
+                            class="btn_tab t_com"
+                            role="tab"
+                            selected="false"
+                            tabindex="-1"
+                            aria-selected="false"
+                          >
+                            기업회원
+                          </button>
+                        </li>
+                      </ul>
+                      <div class="tab_panel">
+                        <div class="login-form">
+                          <div class="id-input-box">
+                            <input type="text" id="id" class="txt_tool" />
+                            <label id="id-label" class="id-label" for="id"
+                              >아이디</label
+                            >
+                          </div>
+                          <div class="pw-input-box">
+                            <input
+                              type="password"
+                              id="password"
+                              name="password"
+                              class="txt_tool"
+                              valuemaxlength="32"
+                            />
+                            <label id="password-label" for="password"
+                              >비밀번호</label
+                            >
+                          </div>
+                          <div class="setting">
+                            <div class="InpBox" style="display: block">
+                              <span class="Chk">
+                                <input
+                                  type="checkbox"
+                                  name="id_save"
+                                  id="autologin"
+                                />
+                                <label class="Lbl" for="autologin"
+                                  >로그인 유지</label
+                                >
+                              </span>
+                            </div>
+                            <div class="InpBox">
+                              <span class="Chk">
+                                <input
+                                  type="checkbox"
+                                  name="id_save"
+                                  id="id_save"
+                                />
+                                <label class="Lbl" for="id_save"
+                                  >아이디 저장</label
+                                >
+                              </span>
+                            </div>
+                          </div>
+                          <button
+                            type="submit"
+                            class="btn_login BtnType SizeML"
+                          >
+                            로그인
+                          </button>
+                        </div>
+                        <div class="signup-forgotten">
+                          <h1 class="sign_up">아이디 찾기</h1>
+                          <h1 class="forgotten">비밀번호 찾기</h1>
+                        </div>
+                        <div class="social_login_tit">
+                          <p class="tit">소셜 계정으로 간편 로그인</p>
+                        </div>
+                        <ul class="social_login">
+                          <li class="login_kakao">
+                            <span class="wrap_icon">
+                              <svg
+                                viewBox="0 0 40 40"
+                                fill="#000"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="LoginFormAndSocialBottons_kakaoIcon__1o__T"
+                                width="25"
+                              >
+                                <path
+                                  fill-rule="evenodd"
+                                  clip-rule="evenodd"
+                                  d="M19.9667 5.00132C11.2667 5.00132 4.16666 10.6013 4.16666 17.6013C4.16666 22.0013 7.06666 25.9013 11.3667 28.2013L10.1667 34.4013L16.9667 29.9013L19.9667 30.1013C28.6667 30.1013 35.7667 24.5013 35.7667 17.5013C35.7667 10.5013 28.6667 4.90132 19.9667 5.00132Z"
+                                ></path>
+                              </svg>
+                              카카오로 시작하기
+                            </span>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <footer id="sri_footer" class="sri_footer">
+      <div class="wrap_footer">
+        <div class="links"></div>
+        <div class="copyright"></div>
+      </div>
+    </footer>
   </body>
+  <script src="../static/loginPage.js"></script>
 </html>
