--- a/static/loginPageCSS.css
+++ b/static/loginPageCSS.css
@@ -187,7 +187,7 @@
 .wrap_intergranted_login_page {
   display: flex;
   flex-direction: column;
-  width: 1084px;
+  width: 800px;
   height: 734px;
   margin: 0 auto 60px;
   box-sizing: border-box;
@@ -208,4 +208,350 @@
   margin-bottom: 50px;
   display: flex;
   align-items: center;
+}
+.wrap_intergranted_login_page .box_intergrated_login {
+  display: flex;
+  height: 100%;
+}
+.wrap_intergranted_login_page .box_intergrated_login .box_middle {
+  position: relative;
+}
+.wrap_intergranted_login_page .box_intergrated_login > div {
+  flex: auto;
+}
+.wrap_intergranted_login_page .box_intergrated_login .box_right:before {
+  width: 1px;
+  height: 100%;
+  background-color: var(--gray40);
+  position: absolute;
+  left: 0;
+  content: "";
+}
+.login_page_wrap {
+  width: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+.login_frm {
+  width: 320px;
+  margin: 40px 0 24px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+.login_page_wrap .login_input_wrap {
+  width: 320px;
+}
+.login_input_wrap .tab_member_type li .btn_tab.active:before {
+  position: absolute;
+  left: 50%;
+  bottom: -4px;
+  transform: translateX(-50%);
+  width: 80%;
+  height: 3px;
+  content: "";
+  background-color: #4876ef;
+}
+.login_input_wrap .tab_member_type li {
+  flex: 1 1 50%;
+  text-align: center;
+}
+.login_input_wrap .tab_member_type {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin-bottom: 16px;
+  padding: 0;
+}
+.login_input_wrap .tab_member_type li .btn_tab.active {
+  font-weight: 700;
+  color: #373f73;
+}
+.login_input_wrap .tab_member_type li .btn_tab {
+  position: relative;
+  color: #8491a7;
+  font-size: 24px;
+  line-height: 34px;
+  width: 100%;
+}
+button {
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+}
+.login_input_wrap .login-form {
+  display: flex;
+  flex-flow: column nowrap;
+}
+.login_input_wrap .login-form .id-input-box,
+.login_input_wrap .login-form .pw-input-box {
+  position: relative;
+}
+.login_input_wrap .login-form .id-input-box {
+  margin-bottom: 8px;
+}
+.login_input_wrap .setting {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  margin-bottom: 24px;
+  font-size: 13px;
+  line-height: 20px;
+  margin-top: 12px;
+}
+.login_input_wrap .login-form input {
+  width: 100%;
+  border: 1px solid #8491a7;
+  background: #fff;
+  color: #373f57;
+  border-radius: 4px;
+  padding: 24px 12px 8px 12px;
+  font-size: 16px;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+.login_input_wrap .login-form label {
+  position: absolute;
+  left: 12px;
+  top: 18px;
+  font-size: 16px;
+  color: #5c667b;
+  transition: all 300ms ease;
+}
+button,
+label {
+  cursor: pointer;
+}
+.login_input_wrap .setting .InpBox:first-child {
+  margin-right: 12px;
+}
+.InpBox .Chk {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+}
+.InpBox .Chk .Lbl:before {
+  display: inline-block;
+  margin-right: 8px;
+  width: 18px;
+  height: 18px;
+  border: 1px solid var(--gray70);
+  border-radius: 4px;
+  vertical-align: top;
+  background: #fff;
+  content: "";
+}
+
+.InpBox .Chk .Lbl:after {
+  display: none;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 8px;
+  height: 5px;
+  border-bottom: 2px solid var(--white);
+  border-left: 2px solid var(--white);
+  border-radius: 1px;
+  transform: rotate(-45deg);
+  content: "";
+}
+.InpBox .Chk input:checked ~ .Lbl:after {
+  display: inline-block;
+  border-color: var(--white);
+}
+.InpBox .Chk input:checked ~ .Lbl:before {
+  border-color: var(--blue90);
+  background: var(--blue90);
+}
+.login_input_wrap .login-form input:focus,
+.login_input_wrap .login-form input:valid,
+.login_input_wrap .login-form input:-webkit-autofill {
+  padding: 24px 12px 9px 12px;
+}
+input,
+button,
+textarea,
+select {
+  line-height: normal;
+}
+.InpBox {
+  display: inline-block;
+  vertical-align: top;
+}
+.InpBox .Chk .Lbl {
+  display: block;
+  position: relative;
+  color: var(--gray100);
+  font-size: 14px;
+  line-height: 20px;
+}
+.login_input_wrap .login-form .setting label {
+  position: static;
+}
+
+.InpBox .Chk input {
+  position: absolute;
+  top: 0;
+  width: 1px;
+  height: 1px;
+  outline: none;
+  opacity: 0;
+  pointer-events: none;
+}
+.InpBox .Chk .Lbl:after {
+  display: none;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 8px;
+  height: 5px;
+  border-bottom: 2px solid var(--white);
+  border-left: 2px solid var(--white);
+  border-radius: 1px;
+  transform: rotate(-45deg);
+  content: "";
+}
+.InpBox .Chk input:checked ~ .Lbl:after {
+  display: inline-block;
+  border-color: var(--white);
+}
+.InpBox .Chk .Lbl:after {
+  display: none;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 8px;
+  height: 5px;
+  border-bottom: 2px solid var(--white);
+  border-left: 2px solid var(--white);
+  border-radius: 1px;
+  transform: rotate(-45deg);
+  content: "";
+}
+.InpBox .Chk:hover input:checked + .Lbl:before {
+  background: var(--blue100);
+}
+ol,
+ul,
+li {
+  list-style: none;
+}
+[class*="BtnType"] {
+  display: inline-flex;
+  position: relative;
+  border: 1px solid var(--blue90);
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: var(--white);
+  text-align: center;
+  vertical-align: top;
+  background-color: var(--blue90);
+  justify-content: center;
+  align-items: center;
+}
+[class*="BtnType"].SizeML {
+  padding: 13px 15px 15px;
+  height: 56px;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 26px;
+}
+.login_input_wrap .login-form .btn_login {
+  margin-bottom: 12px;
+  width: 100%;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  background: #2d65f2;
+  border-radius: 4px;
+}
+.login_input_wrap .login-form .btn_login {
+  margin-bottom: 12px;
+  width: 100%;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  background: #2d65f2;
+  border-radius: 4px;
+}
+.login_input_wrap .signup-forgotten {
+  margin-bottom: 24px;
+  display: flex;
+  position: relative;
+  width: 100%;
+  font-size: 13px;
+  line-height: 24px;
+}
+.login_input_wrap .signup-forgotten > a + a:after {
+  position: absolute;
+  content: "";
+  background-color: var(--gray50);
+  width: 1px;
+  height: 14px;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.login_input_wrap .social_login_tit .tit {
+  text-align: center;
+  font-size: 15px;
+  color: #5c667b;
+  line-height: 24px;
+}
+.login_input_wrap .social_login_tit .tit:before,
+.login_input_wrap .social_login_tit .tit:after {
+  width: 60px;
+  height: 1px;
+  background-color: #eaedf4;
+  display: inline-block;
+  vertical-align: super;
+  content: "";
+}
+.login_input_wrap .social_login_tit .tit:before {
+  margin-right: 8px;
+}
+.login_input_wrap .social_login {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding-top: 24px;
+}
+.login_input_wrap .social_login {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding-top: 24px;
+}
+.login_input_wrap .social_login .login_naver,
+.login_input_wrap .social_login .login_kakao,
+.login_input_wrap .social_login .login_google,
+.login_input_wrap .social_login .login_facebook,
+.login_input_wrap .social_login .login_apple {
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+.login_input_wrap .social_login li .wrap_icon {
+  display: flex;
+  flex-flow: row wrap;
+  width: 300px;
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid #96a0b5;
+  justify-content: center;
+  align-content: center;
+  box-sizing: border-box;
+  gap: 10px;
+}
+.login_input_wrap .social_login .login_kakao .wrap_icon {
+  background-color: #fee500;
+  border-color: #fee500;
+}
+.login_input_wrap .social_login .login_kakao .icon {
+  width: 24px;
+  height: 22px;
 }
