--- a/templates/member/mypage-accountinfo.html
+++ b/templates/member/mypage-accountinfo.html
@@ -246,7 +246,7 @@
                                             <tbody>
                                                 <tr class="field">
                                                     <th scope="row">이름</th>
-                                                    <td>
+                                                    <td class="check">
                                                         <div class="field-body">
                                                             <span class="empty" id="view-name-empty"
                                                                 style="display:none">이름을 입력해주세요.</span>
@@ -263,9 +263,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="field-btn">
-                                                            <button type="button"
-                                                                class="BtnType SizeS btn-modify data-type="
-                                                                name"="">수정</button>
+                                                            <button type="button" class="BtnType SizeS btn_modify" >수정</button>
                                                             <button type="button" id="btnName"
                                                                 class="BtnType SizeS btn-confirm"
                                                                 disabled="">확인</button>
