--- a/static/loginPageCSS.css
+++ b/static/loginPageCSS.css
@@ -555,3 +555,22 @@ li {
   width: 24px;
   height: 22px;
 }
+.sri_footer .wrap_footer {
+  min-width: 960px;
+  border: solid #d7dce5;
+  border-width: 1px 0;
+  background: #f8fafc;
+}
+.sri_footer {
+  display: block;
+  clear: both;
+  position: relative;
+  z-index: 10;
+  width: 100%;
+  min-width: 960px;
+}
+#sri_footer {
+  display: table-row;
+  width: 100%;
+  height: 1px;
+}
