푸터 작업중

--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -293,7 +293,14 @@
     </div>
     <footer id="sri_footer" class="sri_footer">
       <div class="wrap_footer">
-        <div class="links"></div>
+        <div class="links">
+          <ul>
+            <li class="first">
+              <a href="" target="_blank">회사소개</a>
+            </li>
+            <li></li>
+          </ul>
+        </div>
         <div class="copyright"></div>
       </div>
     </footer>
