--- a/static/loginPageCSS.css
+++ b/static/loginPageCSS.css
@@ -146,6 +146,106 @@
   --subwayLine601: #34a344;
   --subwayLine801: #34a344;
 }
+body {
+  position: relative;
+  padding-top: 0;
+  min-width: 1280px;
+  box-sizing: border-box;
+}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+b,
+strong,
+input,
+textarea,
+button,
+select {
+  margin: 0;
+  padding: 0;
+  font-family: "Pretendard", "Malgun Gothic", dotum, gulim, sans-serif;
+}
+html,
+body {
+  min-height: 100%;
+}
 .integrated_header {
   display: flex;
   height: 64px;
@@ -570,7 +670,16 @@ li {
   min-width: 960px;
 }
 #sri_footer {
-  display: table-row;
   width: 100%;
   height: 1px;
+}
+a {
+  color: #444;
+  text-decoration: none;
+}
+.sri_footer .links ul li a {
+  display: inline-flex;
+  color: var(--color_secondary);
+  font-size: 14px;
+  line-height: 24px;
 }
