--- a/static/loginPageCSS.css
+++ b/static/loginPageCSS.css
@@ -673,13 +673,21 @@ li {
   width: 100%;
   height: 1px;
 }
-a {
-  color: #444;
-  text-decoration: none;
-}
+
 .sri_footer .links ul li a {
   display: inline-flex;
   color: var(--color_secondary);
   font-size: 14px;
   line-height: 24px;
+}
+.sri_footer .links ul {
+  display: flex;
+  margin: 24px auto 0;
+  width: 960px;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+}
+a {
+  color: #444;
+  text-decoration: none;
 }
