--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -298,7 +298,7 @@
             <li class="first">
               <a href="" target="_blank">회사소개</a>
             </li>
-            <li></li>
+            <li><a href="">자주묻는 질문</a></li>
           </ul>
         </div>
         <div class="copyright"></div>
