--- a/templates/member/mypage-accountinfo.html
+++ b/templates/member/mypage-accountinfo.html
@@ -263,7 +263,8 @@
                                                             </div>
                                                         </div>
                                                         <div class="field-btn">
-                                                            <button type="button" class="BtnType SizeS btn_modify" >수정</button>
+                                                            <button type="button"
+                                                                class="BtnType SizeS btn_modify">수정</button>
                                                             <button type="button" id="btnName"
                                                                 class="BtnType SizeS btn-confirm"
                                                                 disabled="">확인</button>
@@ -462,7 +463,8 @@
                                                                         class="BtnType SizeS colorBlue btn-confirm">확인</button>
                                                                 </span>
                                                                 <span class="remain-time" style="color: red;">남은시간 <span
-                                                                        id="remain-time-mail" style="color: red;"></span></span>
+                                                                        id="remain-time-mail"
+                                                                        style="color: red;"></span></span>
                                                             </div>
                                                         </div>
                                                         <div class="ipin-guide privacy-guide inactive"
