--- a/static/css/member/mypage-accountinfo1.css
+++ b/static/css/member/mypage-accountinfo1.css
@@ -324,6 +324,10 @@
     font-size: 14px;
     line-height: 20px;
 }
+.header-right6 li {
+    position: relative;
+    padding: 0px 12px;
+}
 
 .header-right-user7 {
     padding-top: 1px;
