--- a/templates/member/mypage-accountwithdrawl.html
+++ b/templates/member/mypage-accountwithdrawl.html
@@ -60,15 +60,9 @@
     <script src="/_next/static/chunks/polyfills-c67a75d1b6f99dc8.js" nomodule=""></script>
     <style data-styled="active" data-styled-version="6.0.7">
     </style>
-<<<<<<< HEAD
     <link rel="stylesheet" type="text/css" href="/static/css/member/mypage-accountwithdrawal1.css">
     <link rel="stylesheet" href="/static/css/member/mypage-accountwithdrawal2.css">
     <link rel="stylesheet" href="/static/css/member/mypage-accountwithdrawal3.css">
-=======
-    <link rel="stylesheet" type="text/css" href="/publishing/static/css/member/mypage-accountwithdrawal1.css">
-    <link rel="stylesheet" href="/publishing/static/css/member/mypage-accountwithdrawal2.css">
-    <link rel="stylesheet" href="/publishing/static/css/member/mypage-accountwithdrawal3.css">
->>>>>>> master
     <script async="" src="//static.airbridge.io/sdk/latest/airbridge.min.js"></script>
     <style>
         @font-face {
@@ -76,18 +70,11 @@
             src: url("/publishing/static/member/fonts/NanumBarunGothic.ttf");
         }
 
-        @font-face {
-            font-family: Retro;
-            src: url("/publishing/static/member/fonts/establish\ Retrosans.ttf");
-        }
+
 
         @font-face {
             font-family: Jumpit;
-<<<<<<< HEAD
             src: url("/static/fonts/member/ff840cfebfb63b0c-s.p.woff2");
-=======
-            src: url("/publishing/static/member/fonts/ff840cfebfb63b0c-s.p.woff2");
->>>>>>> master
         }
 
         * {
@@ -174,11 +161,6 @@
                                         </path>
                                     </g>
                                 </svg></button></div><button class="close-button">닫기</button>
-<<<<<<< HEAD
-
-=======
-                                
->>>>>>> master
                     </div>
                     <div class="searchbox-hidden">
                         <div class="recentsearch">
@@ -189,7 +171,6 @@
                     </div>
                     <div class="searchbox-onclick"></div>
                 </div>
-<<<<<<< HEAD
             </div>
             <nav aria-label="Main navigation" class="nav-sc3">
                 <ul class="header4">
@@ -213,10 +194,6 @@
                             <ul>
                                 <li><a href="/myjumpit">마이템프</a>
                                 </li>
-                                <li><a href="/applications-status/applied">취업축하금
-                                        신청</a></li>
-                                <li><a href="/account">KDT
-                                        훈련과정 인증</a></li>
                                 <li><button type="button">로그아웃</button>
                                 </li>
                             </ul>
@@ -226,44 +203,6 @@
             </nav>
         </div>
 
-=======
-                </div>
-                <nav aria-label="Main navigation" class="nav-sc3">
-                    <ul class="header4">
-                        <li><a class="header-element5" href="/positions?sort=rsp_rate">개발자
-                                채용</a></li>
-                        <li><a class="header-element5" href="/resumes">이력서</a></li>
-    
-                    </ul>
-                    <ul class="header-right6">
-                        <li>
-                            <div class="header-right-user7">
-                                <button type="button">김승균님</button><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                    height="16" fill="none" viewBox="0 0 16 16">
-                                    <path fill="#222" fill-rule="evenodd"
-                                        d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
-                                        clip-rule="evenodd">
-                                    </path>
-                                </svg>
-                            </div>
-                            <div class="header-right-menu8">
-                                <ul>
-                                    <li><a href="/myjumpit">마이템프</a>
-                                    </li>
-                                    <li><a href="/applications-status/applied">취업축하금
-                                            신청</a></li>
-                                    <li><a href="/account">KDT
-                                            훈련과정 인증</a></li>
-                                    <li><button type="button">로그아웃</button>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            
->>>>>>> master
         </div>
     </header>
     <main class="main-sc0">
@@ -271,7 +210,7 @@
             <div class="main-wrapper0">
                 <div class="main-content1">
                     <div>
-                        <h2><a href="/publishing/templates/member/mypage-main.html" style="font-family: Retro;">마이템프</a>
+                        <h2><a href="/publishing/templates/member/mypage-main.html">마이템프</a>
                         </h2>
                         <div class="mypagemenu-wrapper">
                             <ul class="mypagemenu1">
@@ -280,37 +219,26 @@
                                         현황</a>
                                 </li>
                                 <li class="mypagemenu2">
-<<<<<<< HEAD
                                     <a target="_self" href="/publishing/templates/member/mypage-scraplist.html">스크랩
                                         리스트</a>
-=======
-                                    <a target="_self" href="/publishing/templates/member/mypage-scraplist.html">스크랩 리스트</a>
->>>>>>> master
                                 </li>
                                 <li class="mypagemenu2">
                                     <a target="_self" href="/publishing/templates/member/mypage-payment.html">결제 관리</a>
                                 </li>
                                 <li class="mypagemenu2-1">
-<<<<<<< HEAD
                                     <a target="_self" href="/publishing/templates/member/mypage-accountinfo.html">계정 정보
                                         설정</a>
                                 </li>
                                 <li class="mypagemenu2">
                                     <a target="_self"
                                         href="/publishing/templates/member/mypage-accountwithdrawl.html">계정 탈퇴</a>
-=======
-                                    <a target="_self" href="/publishing/templates/member/mypage-accountinfo.html">계정 정보 설정</a>
-                                </li>
-                                <li class="mypagemenu2">
-                                    <a target="_self" href="/publishing/templates/member/mypage-accountwithdrawl.html">계정 탈퇴</a>
->>>>>>> master
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="main-content2">
-                    <!-- <h1 style="font-family: Retro;">입사지원 현황</h1> -->
+                    <!-- <h1>입사지원 현황</h1> -->
                     <!-- <ul class="topbox0">
                         <li class="topbox-content1"><a
                                 href="/applications-status/writing">
@@ -350,7 +278,7 @@
                     </ul> -->
                     <ul class="applied-list0">
                         <h1>
-                            <div style="font-family: Retro;">계정 탈퇴</div>
+                            <div>계정 탈퇴</div>
                         </h1>
                         <div class="applied-list-blank">
                             <section class="cont_withdrawal" id="withdrawalAgree">
@@ -441,6 +369,132 @@
                                                 <button type="button" id="btn_out_agree"
                                                     class="BtnType SizeL">확인</button>
                                             </div>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </section>
+                            <section class="cont_withdrawal" id="withdrawalCertify" style="display:none">
+                                <h2 class="txt_title">
+                                    비밀번호 재확인을 해주세요.
+                                    <span class="txt_subtitle">회원님의 소중한 정보를 위해, 계정의 현재 비밀번호를 확인해 주세요.</span>
+                                </h2>
+                                <form>
+                                    <fieldset>
+                                        <legend class="blind">비밀번호 재확인</legend>
+                                        <div class="wrap_forms">
+                                            <div class="box_common">
+                                                <dl class="area_forms type_password">
+                                                    <dt>아이디</dt>
+                                                    <dd><span class="txt_id">peumyora</span></dd>
+                                                </dl>
+                                                <dl class="area_forms type_password">
+                                                    <dt>
+                                                        <label for="passwd">비밀번호 확인</label>
+                                                    </dt>
+                                                    <dd>
+                                                        <div class="TypoBox">
+                                                            <input type="password" id="passwd" name="passwd"
+                                                                class="Typo SizeL" placeholder="비밀번호를 입력해 주세요"
+                                                                autocomplete="off">
+                                                        </div>
+                                                    </dd>
+                                                </dl>
+                                            </div>
+                                        </div>
+                                        <div class="wrap_buttons">
+                                            <button type="button" id="btn_out_normal_certify"
+                                                class="BtnType SizeL">확인</button>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </section>
+                            <section class="cont_withdrawal" id="withdrawalReason" style="display:none">
+                                <h2 class="txt_title">
+                                    템프 계정을 삭제하려는 이유가 궁금해요.
+                                    <span class="txt_subtitle">탈퇴하는 이유를 알려주시면 더 좋은 서비스를 제공하기 위해 노력하겠습니다.</span>
+                                </h2>
+                                <form method="post" id="person_out_form" autocomplete="off">
+                                    <input type="hidden" id="seq" name="seq" value="seq1738643327">
+                                    <fieldset>
+                                        <legend class="blind">탈퇴 이유</legend>
+                                        <div class="wrap_forms">
+                                            <div class="box_common">
+                                                <dl class="area_forms">
+                                                    <dt>
+                                                        <label for="out_reason_cd">계정 삭제 이유</label>
+                                                    </dt>
+                                                    <dd>
+                                                        <div class="InpBox SizeL">
+                                                            <select name="out_reason_cd" id="out_reason_cd"
+                                                                title="탈퇴 사유">
+                                                                <option value="" label="선택해 주세요">선택해 주세요</option>
+                                                                <option value="4" label="개인정보 보호를 위해">개인정보 보호를 위해
+                                                                </option>
+                                                                <option value="1" label="취업에 성공했기 때문에">취업에 성공했기 때문에
+                                                                </option>
+                                                                <option value="2" label="아이디 변경을 위해">아이디 변경을 위해</option>
+                                                                <option value="11" label="메일, 알림 서비스를 받지 않기 위해">메일, 알림
+                                                                    서비스를 받지 않기 위해</option>
+                                                                <option value="6" label="원하는 정보가 부족해서">원하는 정보가 부족해서
+                                                                </option>
+                                                                <option value="7" label="서비스가 만족스럽지 못해서">서비스가 만족스럽지 못해서
+                                                                </option>
+                                                                <option value="10" label="다른 서비스를 이용해서">다른 서비스를 이용해서
+                                                                </option>
+                                                                <option value="13" label="기타">기타</option>
+                                                            </select>
+                                                        </div>
+                                                    </dd>
+                                                </dl>
+                                                <div>
+                                                    <div class="area_conts" data-out_reason_cd="4">
+                                                        <p>이력서를 비공개로 전환하면 더이상 기업의 연락이 오지 않습니다.<br><br>
+                                                            이직시에도 이전 이력서 내용을 확인하여 더 빠르게 이력서를 업데이트 할 수 있도록 이력서 공개 여부를
+                                                            확인하시겠어요?</p>
+                                                        <a href="/zf_user/member/resume-manage/block-setting"
+                                                            class="btn_page" target="_self">내 이력서 비공개로 전환하기</a>
+                                                    </div>
+                                                    <div class="area_conts" data-out_reason_cd="1">
+                                                        <p>축하드립니다.<br><br>
+                                                            이력서를 비공개로 전환하면 더이상 기업의 연락이 오지 않습니다.<br>
+                                                            이직시에도 이전 이력서 내용을 확인하여 더 빠르게 이력서를 업데이트 할 수 있습니다.<br><br>
+                                                            취업 후에도 커리어 성장을 할 수 있도록 사람인에서 다양한 콘텐츠를 제공하고 있습니다.<br>
+                                                            커리어 관리를 할 수 있는 다양한 콘텐츠를 확인해보는 건 어떨까요?</p>
+                                                        <a href="/zf_user/member/resume-manage/block-setting"
+                                                            class="btn_page" target="_self">내 이력서 비공개로 전환하기</a>
+                                                        <a href="/zf_user/careerplus" class="btn_page"
+                                                            target="_self">커리어를 성장 시켜줄 콘텐츠 확인하기</a>
+                                                    </div>
+                                                    <div class="area_conts" data-out_reason_cd="11">
+                                                        <p>계정을 삭제하면 소중한 회원님의 정보도 함께 삭제되오니<br>
+                                                            계정 삭제가 아닌 메일, 알림 서비스를 잠시 중단해보는건 어떨까요?</p>
+                                                        <a href="/zf_user/member/set-incoming-email" class="btn_page"
+                                                            target="_self">수신 차단 설정하기</a>
+                                                    </div>
+                                                    <div class="area_conts" data-out_reason_cd="6">
+                                                        <a href="/zf_user/search" class="btn_page" target="_self">통합검색
+                                                            이용하기</a>
+                                                    </div>
+                                                    <div class="area_conts" data-out_reason_cd="7">
+                                                        <a href="/zf_user/careerplus" class="btn_page"
+                                                            target="_self">커리어를 성장 시켜줄 콘텐츠 확인하기</a>
+                                                        <a href="https://mentor-match.saramin.co.kr" class="btn_page"
+                                                            target="_self">딱 맞는 멘토 찾아보기</a>
+                                                    </div>
+                                                    <div class="area_conts" data-out_reason_cd="13">
+                                                        <div class="InpBox">
+                                                            <textarea class="ScrollBar" name="out_reason" placeholder="상세한 탈퇴 사유를 남겨주시면
+보다 좋은 서비스를 제공할 수 있도록 노력하겠습니다." title="탈퇴사유" autocomplete="off"></textarea>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="wrap_buttons">
+                                            <button type="button" class="BtnType SizeL GrayInvert btn_out_cancel">탈퇴
+                                                취소</button>
+                                            <button type="button" id="btn_out_confirm"
+                                                class="BtnType SizeL">탈퇴하기</button>
                                         </div>
                                     </fieldset>
                                 </form>
@@ -554,9 +608,7 @@
         style="display: none; visibility: hidden;"></iframe><next-route-announcer
         style="position: absolute;"></next-route-announcer> -->
 </body>
-<script src="/publishing/static/js/member/mypage-all.js"></script>
-<<<<<<< HEAD
+<script src="/static/js/member/mypage-all.js"></script>
+<script src="/static/js/member/mypage-accountwithdrawal.js"></script>
 
-=======
->>>>>>> master
 </html>
